// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table [NEGATIVE] should render with empty required props 1`] = `
.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c8 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="table"
    >
      <div
        class=" c1 c2"
        style="webkit-overflow-scrolling: touch;"
      >
        <div
          class="c3 c4"
          style="width: 100%;"
        />
        <div
          class="c5"
          style="height: 0rem;"
        >
          <div
            class="c6"
            style="width: 100%;"
          />
        </div>
        <div
          class="c7"
          style="pointer-events: auto;"
        />
      </div>
      <div
        class="c8"
      />
    </div>
  </div>
</body>
`;

exports[`Table [NEGATIVE] should render with wrong required props 1`] = `
.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c8 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="table"
    >
      <div
        class=" c1 c2"
        style="webkit-overflow-scrolling: touch;"
      >
        <div
          class="c3 c4"
          style="width: 100%;"
        />
        <div
          class="c5"
          style="height: 0rem;"
        >
          <div
            class="c6"
            style="width: 100%;"
          />
        </div>
        <div
          class="c7"
          style="pointer-events: auto;"
        />
      </div>
      <div
        class="c8"
      />
    </div>
  </div>
</body>
`;

exports[`Table test table loading state 1`] = `
.c14 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #ECF1FC;
  pointer-events: none;
}

.c8 {
  display: inline-block;
  position: relative;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  height: 2.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.5rem;
  color: #2D2D2D;
  overflow: hidden;
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 > span {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  min-width: 100%;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4475E3;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
  background-color: #FFFFFF;
}

.c7 > * {
  -webkit-transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c7:hover {
  background-color: #F7F8FA;
}

.c7 > span {
  min-width: auto;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 600;
  font-style: normal;
}

.c7 > span:first-letter {
  text-transform: uppercase;
}

.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  background-color: transparent;
}

.c13 .c5 {
  z-index: 2;
}

.c13 .c5:last-child {
  padding-right: 1.125rem;
}

.c13:hover {
  background-color: #F7F8FA;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c15 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c9 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c10 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

.c11 {
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  background: transparent;
  height: 100%;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="table"
    >
      <div
        class=" c1 c2"
        style="webkit-overflow-scrolling: touch;"
      >
        <div
          class="c3 c4"
          style="grid-template-columns: 100px 200px 200px;"
        >
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              id
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              name
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              email
            </span>
          </div>
        </div>
        <div
          class="c9"
          style="height: 21.64375rem;"
        >
          <div
            class="c10"
            style="grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c11"
            />
            <div
              class="c11"
            />
            <div
              class="c11"
            />
          </div>
        </div>
        <div
          class="c12"
          style="pointer-events: auto;"
        >
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                1
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                John
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                john@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                2
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Lou
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                lou@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                3
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Cecile
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                cecele@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                4
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Kate
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                kate@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                5
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Les
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                les@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                6
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Nicol
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                nicol@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                7
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Adam
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                adam@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                8
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Bob
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                bob@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                9
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Mary
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                mary@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                10
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Well
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                well@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
      </div>
      <div
        class="c15"
      />
    </div>
  </div>
</body>
`;

exports[`Table test table loading state 2`] = `
.c18 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #ECF1FC;
  pointer-events: none;
}

.c8 {
  display: inline-block;
  position: relative;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  height: 2.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.5rem;
  color: #2D2D2D;
  overflow: hidden;
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 > span {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  min-width: 100%;
}

.c12 {
  height: 0.125rem;
  background: #4475E3;
}

.c9 {
  width: 100%;
  height: 0.0625rem;
  background: #B3C6F1;
  overflow: hidden;
}

.c9 .c11 {
  -webkit-animation: 1.7s infinite huZioT cubic-bezier(0.45,0.05,0,1);
  animation: 1.7s infinite huZioT cubic-bezier(0.45,0.05,0,1);
}

.c10 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 3;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4475E3;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
  background-color: #FFFFFF;
}

.c7 > * {
  -webkit-transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c7:hover {
  background-color: #F7F8FA;
}

.c7 > span {
  min-width: auto;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 600;
  font-style: normal;
}

.c7 > span:first-letter {
  text-transform: uppercase;
}

.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  background-color: transparent;
}

.c17 .c5 {
  z-index: 2;
}

.c17 .c5:last-child {
  padding-right: 1.125rem;
}

.c17:hover {
  background-color: #F7F8FA;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c19 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c13 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

.c15 {
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  background: transparent;
  height: 100%;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="table"
    >
      <div
        class=" c1 c2"
        style="webkit-overflow-scrolling: touch;"
      >
        <div
          class="c3 c4"
          style="grid-template-columns: 100px 200px 200px;"
        >
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              id
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              name
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              email
            </span>
          </div>
          <div
            class="c9 c10"
            data-testid="line-loader"
          >
            <div
              class="c11 c12"
              data-testid="runner"
            />
          </div>
        </div>
        <div
          class="c13"
          style="height: 21.64375rem;"
        >
          <div
            class="c14"
            style="grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c15"
            />
            <div
              class="c15"
            />
            <div
              class="c15"
            />
          </div>
        </div>
        <div
          class="c16"
          style="pointer-events: auto;"
        >
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                1
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                John
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                john@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                2
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Lou
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                lou@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                3
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Cecile
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                cecele@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                4
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Kate
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                kate@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                5
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Les
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                les@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                6
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Nicol
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                nicol@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                7
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Adam
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                adam@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                8
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Bob
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                bob@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                9
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Mary
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                mary@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c17"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                10
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Well
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                well@example.com
              </span>
            </div>
            <div
              class="c18"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
      </div>
      <div
        class="c19"
      />
    </div>
  </div>
</body>
`;

exports[`Table test table render 1`] = `
.c14 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #ECF1FC;
  pointer-events: none;
}

.c8 {
  display: inline-block;
  position: relative;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  height: 2.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.5rem;
  color: #2D2D2D;
  overflow: hidden;
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 > span {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  min-width: 100%;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4475E3;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
  background-color: #FFFFFF;
}

.c7 > * {
  -webkit-transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c7:hover {
  background-color: #F7F8FA;
}

.c7 > span {
  min-width: auto;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 600;
  font-style: normal;
}

.c7 > span:first-letter {
  text-transform: uppercase;
}

.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  background-color: transparent;
}

.c13 .c5 {
  z-index: 2;
}

.c13 .c5:last-child {
  padding-right: 1.125rem;
}

.c13:hover {
  background-color: #F7F8FA;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c15 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c9 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c10 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

.c11 {
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  background: transparent;
  height: 100%;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="table"
    >
      <div
        class=" c1 c2"
        style="webkit-overflow-scrolling: touch;"
      >
        <div
          class="c3 c4"
          style="grid-template-columns: 100px 200px 200px;"
        >
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              id
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              name
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              email
            </span>
          </div>
        </div>
        <div
          class="c9"
          style="height: 21.64375rem;"
        >
          <div
            class="c10"
            style="grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c11"
            />
            <div
              class="c11"
            />
            <div
              class="c11"
            />
          </div>
        </div>
        <div
          class="c12"
          style="pointer-events: auto;"
        >
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                1
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                John
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                john@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                2
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Lou
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                lou@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                3
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Cecile
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                cecele@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                4
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Kate
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                kate@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                5
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Les
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                les@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                6
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Nicol
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                nicol@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                7
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Adam
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                adam@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                8
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Bob
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                bob@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                9
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Mary
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                mary@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
          <div
            class="c3 c13"
            data-testid="table-row"
            style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                10
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Well
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                well@example.com
              </span>
            </div>
            <div
              class="c14"
              color="primaryLight"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
      </div>
      <div
        class="c15"
      />
    </div>
  </div>
</body>
`;

exports[`Table test table render 2`] = `
.c14 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #ECF1FC;
  pointer-events: none;
}

.c8 {
  display: inline-block;
  position: relative;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  height: 2.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.5rem;
  color: #2D2D2D;
  overflow: hidden;
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 > span {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  min-width: 100%;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4475E3;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
  background-color: #FFFFFF;
}

.c7 > * {
  -webkit-transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c7:hover {
  background-color: #F7F8FA;
}

.c7 > span {
  min-width: auto;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 600;
  font-style: normal;
}

.c7 > span:first-letter {
  text-transform: uppercase;
}

.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  background-color: transparent;
}

.c13 .c5 {
  z-index: 2;
}

.c13 .c5:last-child {
  padding-right: 1.125rem;
}

.c13:hover {
  background-color: #F7F8FA;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c15 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c9 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c10 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

.c11 {
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  background: transparent;
  height: 100%;
}

<body>
  <div>
    <div
      style="width: 200px; max-width: 200px;"
    >
      <div
        class="c0"
        data-testid="table-small-width"
      >
        <div
          class=" c1 c2"
          style="webkit-overflow-scrolling: touch;"
        >
          <div
            class="c3 c4"
            style="grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6 c7"
              data-testid="table-head-cell"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                id
              </span>
            </div>
            <div
              class="c5 c6 c7"
              data-testid="table-head-cell"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                name
              </span>
            </div>
            <div
              class="c5 c6 c7"
              data-testid="table-head-cell"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                email
              </span>
            </div>
          </div>
          <div
            class="c9"
            style="height: 21.64375rem;"
          >
            <div
              class="c10"
              style="grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c11"
              />
              <div
                class="c11"
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c12"
            style="pointer-events: auto;"
          >
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  1
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  John
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  john@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  2
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Lou
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  lou@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  3
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Cecile
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  cecele@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  4
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Kate
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  kate@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  5
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Les
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  les@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  6
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Nicol
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  nicol@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  7
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Adam
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  adam@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  8
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Bob
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  bob@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  9
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Mary
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  mary@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
            <div
              class="c3 c13"
              data-testid="table-row"
              style="overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
            >
              <div
                class="c5 c6"
                data-id="id"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  10
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="name"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  Well
                </span>
              </div>
              <div
                class="c5 c6"
                data-id="email"
              >
                <span
                  class="c8"
                  data-testid="tooltip-container"
                >
                  well@example.com
                </span>
              </div>
              <div
                class="c14"
                color="primaryLight"
                opacity="1,1"
                scale="0"
                style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
              />
            </div>
          </div>
        </div>
        <div
          class="c15"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Table test table render 3`] = `
.c8 {
  display: inline-block;
  position: relative;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  height: 2.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.5rem;
  color: #2D2D2D;
  overflow: hidden;
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 > span {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  min-width: 100%;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4475E3;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
  background-color: #FFFFFF;
}

.c7 > * {
  -webkit-transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c7:hover {
  background-color: #F7F8FA;
}

.c7 > span {
  min-width: auto;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 600;
  font-style: normal;
}

.c7 > span:first-letter {
  text-transform: uppercase;
}

.c3 {
  position: relative;
  display: grid;
  max-height: 2.125rem;
  min-height: 2.125rem;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  box-shadow: inset 0 -0.0625rem 0 #ECF1FC;
}

.c16 .c5 {
  z-index: 2;
}

.c16 .c5:last-child {
  padding-right: 1.125rem;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: visible !important;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  background-color: transparent;
}

.c13 .c5 {
  z-index: 2;
}

.c13 .c5:last-child {
  padding-right: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 27.4375rem !important;
}

.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c1::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 0.25rem;
}

.c2 {
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
}

.c4 {
  background-color: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  position: relative;
  min-height: calc(100% - 2.164375rem);
}

.c15 {
  margin-top: 1.25rem;
  height: 2rem;
}

.c9 {
  pointer-events: none;
  position: absolute;
  top: 2.164375rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c10 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

.c11 {
  -webkit-transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: background-color 0.3s cubic-bezier(0.45,0.05,0,1);
  background: transparent;
  height: 100%;
}

.c14 {
  position: absolute !important;
  left: 0;
  right: 0;
  width: 100%;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="virtual-table"
    >
      <div
        class=" c1 c2"
        style="webkit-overflow-scrolling: touch;"
      >
        <div
          class="c3 c4"
          style="grid-template-columns: 100px 200px 200px;"
        >
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              id
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              name
            </span>
          </div>
          <div
            class="c5 c6 c7"
            data-testid="table-head-cell"
          >
            <span
              class="c8"
              data-testid="tooltip-container"
            >
              email
            </span>
          </div>
        </div>
        <div
          class="c9"
          style="height: 21.64375rem;"
        >
          <div
            class="c10"
            style="grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c11"
            />
            <div
              class="c11"
            />
            <div
              class="c11"
            />
          </div>
        </div>
        <div
          class="c12"
          style="min-height: 21.64375rem; max-height: 21.64375rem; pointer-events: auto;"
        >
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(0rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                1
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                John
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                john@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(2.164375rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                2
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Lou
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                lou@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(4.32875rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                3
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Cecile
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                cecele@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(6.493125000000001rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                4
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Kate
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                kate@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(8.6575rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                5
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Les
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                les@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(10.821875rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                6
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Nicol
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                nicol@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(12.98625rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                7
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Adam
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                adam@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(15.150625rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                8
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Bob
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                bob@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(17.315rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                9
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Mary
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                mary@example.com
              </span>
            </div>
          </div>
          <div
            class="c3 c13 c14"
            data-testid="table-row"
            style="height: 2.164375rem; transform: translateY(19.479375rem); overflow: hidden; position: relative; grid-template-columns: 100px 200px 200px;"
          >
            <div
              class="c5 c6"
              data-id="id"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                10
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="name"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                Well
              </span>
            </div>
            <div
              class="c5 c6"
              data-id="email"
            >
              <span
                class="c8"
                data-testid="tooltip-container"
              >
                well@example.com
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c15"
      />
    </div>
  </div>
</body>
`;
